src/test/06-Errors/error-return-not-all-1.txt
error-return-not-all-1.ck:2:5: error: not all control paths in 'fun float foo()' return a value
[2] fun float foo()
        ^
